# http-cpp

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  zmq_notes.md
cmake/: FindLibMagic.cmake  FindZMQ.cmake
example/: CMakeLists.txt
example/custom_webservice/: CMakeLists.txt
example/custom_webservice/include/: custom_resource.h
example/custom_webservice/src/: custom_resource.cpp
example/rest_webservice/: CMakeLists.txt
example/rest_webservice/include/: rest_resource.h  service.h
example/rest_webservice/src/: service.cpp
ext/dll/include/boost/dll/detail/windows/: path_from_handle.hpp  shared_library_impl.hpp
ext/libmagic/: README
libhttp-cpp/: CMakeLists.txt
libhttp-cpp/cmake/: FindLibMagic.cmake
libhttp-cpp/include/: http_constants.h  http_exception.h  http_service.h  http_service.hpp  http_structure.h  http_structure.hpp
libhttp-cpp/include/interface/: generic_structure.h  http_external_service.h  http_resource.h
libhttp-cpp/src/: http_constants.cpp  http_directory_listing.cpp  http_directory_listing.h  http_external_resource.cpp  http_external_resource.h  http_filesystem_resource.cpp  http_filesystem_resource.h  http_protocol_handler.cpp  http_protocol_handler.h  http_protocol_handler.hpp  http_protocol_handler_cache.cpp  http_protocol_handler_cache.h  http_protocol_one_one.cpp  http_protocol_one_one.h  http_protocol_one_zero.cpp  http_protocol_one_zero.h  http_resource.cpp  http_resource.h  http_resource.hpp  http_resource_factory.cpp  http_resource_factory.h  http_service.cpp  http_service.h  http_structure.cpp  logger.cpp  logger.h
libhttp-cpp/test/: CMakeLists.txt
libhttp-cpp/test/http/: method.cpp
librest/: CMakeLists.txt
librest/include/: http_router.h  parameter_pack.h  rest_request.h  rest_resource.h  rest_service.h  router.h  router.hpp
librest/src/: http_router.cpp  rest_resource.cpp
src/: http_server.cpp  http_server.h  http_structure.cpp  http_structure.hpp  http_website.cpp  http_website.h  http_website.hpp  http_worker.cpp  http_worker.h  identity.h  logger.cpp  logger.h  logger.hpp  main.cpp  runnable.h  virtual_website.cpp  virtual_website.h  virtual_website.hpp  zmq_utility.hpp
